--- a/src/views/OneMonkey.pug
+++ b/src/views/OneMonkey.pug
@@ -18,7 +18,7 @@ block content
                 td 
                     - var urlImg = obj.urlPhoto
                     if obj.urlPhoto != ""
-                        img(src=urlImg width="500")
+                        img(src=urlImg width="500" height="500")
                     else
                         -
                 td #{obj.id}
