--- a/src/views/OneMonkey.pug
+++ b/src/views/OneMonkey.pug
@@ -19,8 +19,8 @@ block content
                     - var urlImg = obj.urlPhoto
                     if obj.urlPhoto != ""
                         img(src=urlImg width="500" height="500")
-                    else
-                        -
+                    else X
+                        
                 td #{obj.id}
                 td #{obj.age}
                 td #{obj.espece}
